<resources>
    <string name="app_name">Onikku</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_faq">FAQ</string>
    <string name="title_about_us">About Us</string>
    <string name="about_team">Tim Pembuat Aplikasi</string>
    <string name="about_md_engineer">Android Engineer</string>
    <string name="about_ml_engineer">Machine Learning Engineer</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="title_activity_detect">DetectActivity</string>
    <string name="pengolah_terdekat">Pengolah Terdekat</string>
    <string name="nama_olahan">Nama Olahan :</string>
    <string name="judul_olahan">Judul Olahan</string>
    <string name="bahan_bahan">Bahan-bahan :</string>
    <string name="bahan_bahan_olahan">Bahan-bahan olahan</string>
    <string name="alat_alat">Alat-alat :</string>
    <string name="alat_alat_olahan">Alat-Alat olahan</string>
    <string name="langkah_langkah">Langkah-langkah :</string>
    <string name="langkah_langkah_olahan">Langkah-langkah olahan</string>
    <string name="gambar_yang_ingin_di_deteksi">Gambar yang ingin di deteksi</string>
    <string name="sampah_organik">Sampah Organik :</string>
    <string name="hasil_deteksi">Hasil Deteksi</string>
    <string name="rekomendasi_olahan_dirumah">Rekomendasi Olahan Dirumah :</string>
    <string name="anggota_1">Muhamad Arif Boediman</string>
    <string name="email_anggota_1">a304dsx1399@bangkit.academy</string>
    <string name="anggota_2">Tiara Rianasari</string>
    <string name="email_anggota_2">m151dsy2359@bangkit.academy</string>
    <string name="anggota_3">Zahra Putri Amanina</string>
    <string name="email_anggota_3">m151dsy1480@bangkit.academy</string>
    <string name="anggota_4">Fajris Zahrotun Nihayah</string>
    <string name="email_anggota_4">m017dsy3443@bangkit.academy</string>
    <string name="cloud_computing_engineer">Cloud Computing Engineer</string>
    <string name="anggota_5">Kheyla Ramadhani Hakim</string>
    <string name="email_anggota_5">c132dsy0767@bangkit.academy</string>
    <string name="anggota_6">Radhyana Putri</string>
    <string name="email_anggota_6">c151dsy1383@bangkit.academy</string>
    <string name="fitur_aplikasi">Fitur Aplikasi</string>
    <string name="deteksi_sampah">Deteksi Sampah</string>
    <string name="drop_down">Drop Down</string>
    <string name="fold_up">Fold Up</string>
</resources>